py.at.home_2_x86_compiler/src/main/java/evilpops/pyathome_2_x86/_migration/grammar/grammar_classes/PyAtHomeParser.java
// Generated from H:/Projects/diplomski/py.at.home_2_x86_compiler/py.at.home_2_x86_compiler/src/main/java/evilpops/pyathome_2_x86/_migration/grammar/PyAtHome.g4 by ANTLR 4.13.1
package main.java.evilpops.pyathome_2_x86._migration.grammar.grammar_classes;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PyAtHomeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS_SKIP=1, COMMENT_SKIP=2, NEWLINE=3, DEF=4, RETURN=5, T_INT=6, T_FLOAT=7, 
		T_BOOLEAN=8, T_STRING=9, T_NONE=10, ARROW=11, COMMA=12, COLON=13, ASSIGN=14, 
		L_PAREN=15, R_PAREN=16, PLUS=17, MINUS=18, MUL=19, DIV=20, EQ=21, NEQ=22, 
		GR=23, LS=24, GREQ=25, LSEQ=26, AND=27, OR=28, NONE=29, BOOLEAN=30, ID=31, 
		FLOAT=32, INTEGER=33, STRING=34, INDENT=35, DEDENT=36, INVALID_DENT=37;
	public static final int
		RULE_program = 0, RULE_statementsList = 1, RULE_statement = 2, RULE_simpleStatement = 3, 
		RULE_compundStatement = 4, RULE_assignStatement = 5, RULE_returnStatement = 6, 
		RULE_functionDef = 7, RULE_functionDeclaration = 8, RULE_functionIdentifier = 9, 
		RULE_parameters = 10, RULE_paramNonDefVal = 11, RULE_paramDefVal = 12, 
		RULE_block = 13, RULE_retType = 14, RULE_varType = 15, RULE_types = 16, 
		RULE_numExpression = 17, RULE_addSubOperators = 18, RULE_mulDivOperators = 19, 
		RULE_relOperators = 20, RULE_logicAndOperator = 21, RULE_logicOrOperator = 22, 
		RULE_expression = 23, RULE_functionCall = 24, RULE_arguments = 25, RULE_nonIdArgs = 26, 
		RULE_idArgs = 27, RULE_literal = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statementsList", "statement", "simpleStatement", "compundStatement", 
			"assignStatement", "returnStatement", "functionDef", "functionDeclaration", 
			"functionIdentifier", "parameters", "paramNonDefVal", "paramDefVal", 
			"block", "retType", "varType", "types", "numExpression", "addSubOperators", 
			"mulDivOperators", "relOperators", "logicAndOperator", "logicOrOperator", 
			"expression", "functionCall", "arguments", "nonIdArgs", "idArgs", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'def'", "'return'", "'int'", "'float'", "'bool'", 
			"'str'", "'none'", "'->'", "','", "':'", "'='", "'('", "')'", "'+'", 
			"'-'", "'*'", "'/'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'and'", 
			"'or'", "'None'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS_SKIP", "COMMENT_SKIP", "NEWLINE", "DEF", "RETURN", "T_INT", 
			"T_FLOAT", "T_BOOLEAN", "T_STRING", "T_NONE", "ARROW", "COMMA", "COLON", 
			"ASSIGN", "L_PAREN", "R_PAREN", "PLUS", "MINUS", "MUL", "DIV", "EQ", 
			"NEQ", "GR", "LS", "GREQ", "LSEQ", "AND", "OR", "NONE", "BOOLEAN", "ID", 
			"FLOAT", "INTEGER", "STRING", "INDENT", "DEDENT", "INVALID_DENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PyAtHome.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	static class ContextExtention extends ParserRuleContext {
	    protected int refToSymTab;
	    public ContextExtention(ParserRuleContext parent, int invokingState) {
	         super(parent, invokingState);
	         refToSymTab = -1;
	    }
	    public void setRefToSymTab(int ref) {
	        this.refToSymTab = ref;
	    }
	    public int getRefToSymTab() {
	        return this.refToSymTab;
	    }
	}

	public PyAtHomeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ContextExtention {
		public StatementsListContext statementsList() {
			return getRuleContext(StatementsListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PyAtHomeParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(PyAtHomeParser.NEWLINE, 0); }
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public TerminalNode INVALID_DENT() { return getToken(PyAtHomeParser.INVALID_DENT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(58);
				match(NEWLINE);
				}
			}

			setState(61);
			statementsList();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN || _la==ID) {
				{
				setState(62);
				simpleStatement();
				}
			}

			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INVALID_DENT) {
				{
				setState(65);
				match(INVALID_DENT);
				}
			}

			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsListContext extends ContextExtention {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterStatementsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitStatementsList(this);
		}
	}

	public final StatementsListContext statementsList() throws RecognitionException {
		StatementsListContext _localctx = new StatementsListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementsList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(70);
					statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(73); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ContextExtention {
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PyAtHomeParser.NEWLINE, 0); }
		public CompundStatementContext compundStatement() {
			return getRuleContext(CompundStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				simpleStatement();
				setState(76);
				match(NEWLINE);
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				compundStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends ContextExtention {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitSimpleStatement(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simpleStatement);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				assignStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				returnStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				functionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompundStatementContext extends ContextExtention {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public CompundStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compundStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterCompundStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitCompundStatement(this);
		}
	}

	public final CompundStatementContext compundStatement() throws RecognitionException {
		CompundStatementContext _localctx = new CompundStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_compundStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			functionDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignStatementContext extends ContextExtention {
		public TerminalNode ID() { return getToken(PyAtHomeParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PyAtHomeParser.ASSIGN, 0); }
		public NumExpressionContext numExpression() {
			return getRuleContext(NumExpressionContext.class,0);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterAssignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitAssignStatement(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(ID);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(89);
				varType();
				}
			}

			setState(92);
			match(ASSIGN);
			setState(93);
			numExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends ContextExtention {
		public TerminalNode RETURN() { return getToken(PyAtHomeParser.RETURN, 0); }
		public NumExpressionContext numExpression() {
			return getRuleContext(NumExpressionContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitReturnStatement(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_returnStatement);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(RETURN);
				setState(96);
				numExpression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(RETURN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefContext extends ContextExtention {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(PyAtHomeParser.INDENT, 0); }
		public StatementsListContext statementsList() {
			return getRuleContext(StatementsListContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(PyAtHomeParser.DEDENT, 0); }
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitFunctionDef(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			functionDeclaration();
			setState(101);
			match(INDENT);
			setState(102);
			statementsList();
			setState(103);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ContextExtention {
		public FunctionIdentifierContext functionIdentifier() {
			return getRuleContext(FunctionIdentifierContext.class,0);
		}
		public TerminalNode L_PAREN() { return getToken(PyAtHomeParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(PyAtHomeParser.R_PAREN, 0); }
		public TerminalNode COLON() { return getToken(PyAtHomeParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(PyAtHomeParser.NEWLINE, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public RetTypeContext retType() {
			return getRuleContext(RetTypeContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			functionIdentifier();
			setState(106);
			match(L_PAREN);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(107);
				parameters();
				}
			}

			setState(110);
			match(R_PAREN);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(111);
				retType();
				}
			}

			setState(114);
			match(COLON);
			setState(115);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionIdentifierContext extends ContextExtention {
		public TerminalNode DEF() { return getToken(PyAtHomeParser.DEF, 0); }
		public TerminalNode ID() { return getToken(PyAtHomeParser.ID, 0); }
		public FunctionIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterFunctionIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitFunctionIdentifier(this);
		}
	}

	public final FunctionIdentifierContext functionIdentifier() throws RecognitionException {
		FunctionIdentifierContext _localctx = new FunctionIdentifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(DEF);
			setState(118);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ContextExtention {
		public ParamNonDefValContext paramNonDefVal() {
			return getRuleContext(ParamNonDefValContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(PyAtHomeParser.COMMA, 0); }
		public ParamDefValContext paramDefVal() {
			return getRuleContext(ParamDefValContext.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameters);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				paramNonDefVal(0);
				setState(121);
				match(COMMA);
				setState(122);
				paramDefVal(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				paramNonDefVal(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				paramDefVal(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamNonDefValContext extends ContextExtention {
		public TerminalNode ID() { return getToken(PyAtHomeParser.ID, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public List<ParamNonDefValContext> paramNonDefVal() {
			return getRuleContexts(ParamNonDefValContext.class);
		}
		public ParamNonDefValContext paramNonDefVal(int i) {
			return getRuleContext(ParamNonDefValContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(PyAtHomeParser.COMMA, 0); }
		public ParamNonDefValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramNonDefVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).enterParamNonDefVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyAtHomeListener ) ((PyAtHomeListener)listener).exitParamNonDefVal(this);
		}
	}

	public final ParamNonDefValContext paramNonDefVal() throws RecognitionException {
		return paramNonDefVal(0);
	}

	private ParamNonDefValContext paramNonDefVal(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ParamNonDefValContext _localctx = new ParamNonDefValContext(_ctx, _parentState);
		ParamNonDefValContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_paramNonDefVal, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(129);
			match(ID);
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(130);
				varType();
				}
				break;
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(138);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ParamNonDefValContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_paramNonDefVal);
					setState(133);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(134);
					match(COMMA);
					setState(135);
					paramNonDefVal(2);
					}
					} 
				}
				setState(140);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
